--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,66 +6,10 @@
 <!-- buzz-box -->
 <%= render partial: 'welcome/buzz_box', locals: {films: @films}%>
 
-<div class="row buzz-box  clearfix">
-
-  <div class="col-xs-12">
-    <ul class="thumbnails clearfix">
-      <%@top_three_films_arr.each do |film_obj|%>
-      <li class="col-xs-4 col-sm-3 col-md-2">
-        <div class="thumbnail clearfix">
-
-          <a href="http://<%= film_obj.screenings.first.theater.website_url %>">
-            <% if (film_obj.poster_url == "NA") %>
-            <%= image_tag "posters/default", class: "poster" %>
-            <% else %>
-            <%= image_tag "posters/poster-#{film_obj.id}", class: "poster" %>
-            <% end %>
-            <div class="overlay">
-              <h2><%= film_obj.title %></h2>
-            </div>
-          </a>
-        </div>
-      </li>
-      <%end%>
-
-      <li class="hidden-xs col-sm-3 col-md-2 ">
-        <div class="thumbnail">
-          <a href="http://<%= @fourth_top_film.screenings.first.theater.website_url %>">
-            <% if (@fourth_top_film.poster_url == "NA") %>
-            <%= image_tag "posters/default" %>
-            <% else %>
-            <%= image_tag "posters/poster-#{@fourth_top_film.id}" %>
-            <% end %>
-
-            <div class="overlay">
-              <h2><%=@fourth_top_film.title%></h2>
-            </div>
-          </a>
-        </div>
-      </li>
-
-      <% @fifth_and_sixth_top_films_arr.each do |film_obj| %>
-      <li class="hidden-xs hidden-sm col-md-2 ">
-        <div class="thumbnail">
-          <a href="http://<%= film_obj.screenings.first.theater.website_url %>">
-            <% if (film_obj.poster_url == "NA") %>
-            <%= image_tag "posters/default" %>
-            <% else %>
-            <%= image_tag "posters/poster-#{film_obj.id}" %>
-            <% end %>
-            <div class="overlay">
-              <h2><%=film_obj.title%></h2>
-            </div>
-          </a>
-        </div>
-      </li>
-
-      <%end%>
-    </ul>
-  </div>
-</div>
-<!-- /buzz-box -->
+<!-- theater-tab buttons -->
 <%= render partial: "/theaters_nav", locals: {theaters: @theaters}%>
 
 <!-- Calendar -->
-<%= render partial: "/calendar", locals: {screenings: @screenings, date_filler: @date_filler} %>
+<div class="container" id="calendar-box">
+  <%= render partial: "/calendar", locals: {screenings: @screenings, date_filler: @date_filler} %>
+</div>
