--- a/app/assets/stylesheets/buzzbox.scss
+++ b/app/assets/stylesheets/buzzbox.scss
@@ -1,23 +1,27 @@
+
 /* BUZZ BOX TEST */
+.thumbnail-container {
+    *{
+        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        -ms-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+    }
+}
+
 .thumbnail {
     position:relative;
     overflow:hidden;
-
-
-    *{
-        -webkit-transition: all 0.5s ease-in-out;
-        -moz-transition: all 0.5s ease-in-out;
-        -o-transition: all 0.5s ease-in-out;
-        -ms-transition: all 0.5s ease-in-out;
-        transition: all 0.5s ease-in-out;
-    }
+    /*background-color: black !important;*/
+    border: 0px !important;
 }
 
 .caption {
     position:absolute;
     top:-100%;
     right:0;
-    background:rgba(66, 139, 202, 0.75);
+    background:rgba(0, 0, 0, 0.5);
     width:100%;
     height:100%;
     padding:2%;
@@ -25,166 +29,22 @@
     color:#fff !important;
     z-index:2;
     h4 {
+        font-size: 1rem;
         border-bottom: 2px solid yellow;
+    }
+    p {
+        font-size: 1rem;
     }
 }
 .thumbnail:hover {
     -webkit-transform: scale(1.3, 1.3);
     -ms-transform: scale(1.3, 1.3);
     transform: scale(1.3, 1.3);
+    transition: all 0.5s ease-in-out;
+    background-color: yellow !important;
+    z-index:1;
 
     .caption {
         top:0%;
     }
 }
-
-/*.thumbnail {
-    position:relative;
-    overflow:hidden;
-    *{
-        -webkit-transition: all 0.5s ease-in-out;
-        -moz-transition: all 0.5s ease-in-out;
-        -o-transition: all 0.5s ease-in-out;
-        -ms-transition: all 0.5s ease-in-out;
-        transition: all 0.5s ease-in-out;
-    }
-}
-.caption {
-    position:absolute;
-    top:-100%;
-    right:0;
-    background:rgba(66, 139, 202, 0.75);
-    width:100%;
-    height:100%;
-    padding:2%;
-    text-align:center;
-    color:#fff !important;
-    z-index:2;
-    h4 {
-        border-bottom: 2px solid yellow;
-    }
-}
-.thumbnail:hover {
-
-    -webkit-transform: scale(1.3, 1.3);
-    -ms-transform: scale(1.3, 1.3);
-    transform: scale(1.3, 1.3);
-    opacity:0.5;
-    .caption {
-        top:0%;
-    }
-    img {
-        opacity:0.5;
-    }
-    }*/
-
-
-
-
-
-
-/*div.thumbnail:hover {
-    position: relative;
-    text-decoration: none;
-    z-index: 1;
-
-    h2{
-        border-bottom: 2px solid yellow;
-    }
-
-    img {
-        position: relative;
-        cursor: pointer;
-        -webkit-transform: scale(1.3, 1.3);
-        -ms-transform: scale(1.3, 1.3);
-        transform: scale(1.3, 1.3);
-        transition-duration: 0.3s;
-        -webkit-transition-duration: 0.3s;*/ /* Safari */
-        /*  box-shadow: 10px 10px 5px #cccc00;*/
-     /*   opacity:0.5;
-    }
-    }*/
-    /* END OF TEST CODE */
-
-
-
-/*div.buzz-box{
-    background-color: black;
-
-    .overlay {
-        position: absolute;
-        top: 0;
-        color: white;
-        display: none;
-        text-align: center;
-        width: 100%;
-    }
-
-    img {
-
-        max-width:100%;
-        max-height: 200px;
-
-        -webkit-transform: scale(1, 1);
-        -ms-transform: scale(1, 1);
-        transform: scale(1, 1);
-        transition-duration: 0.5s;
-        -webkit-transition-duration: 0.5s; */
- /*   }
-
-    div.thumbnail {
-        position: relative;
-    }
-
-    div.thumbnail:hover {
-        position: relative;
-        text-decoration: none;
-        z-index: 1;
-
-        h2{
-            border-bottom: 2px solid yellow;
-        }
-
-        img {
-            position: relative;
-            cursor: pointer;
-            -webkit-transform: scale(1.3, 1.3);
-            -ms-transform: scale(1.3, 1.3);
-            transform: scale(1.3, 1.3);
-            transition-duration: 0.3s;
-            -webkit-transition-duration: 0.3s; */
-            /*opacity:0.5;
-        }
-    }
-
-    a {
-        -webkit-transition: all 150ms ease;
-        -moz-transition: all 150ms ease;
-        -ms-transition: all 150ms ease;
-        -o-transition: all 150ms ease;
-        transition: all 150ms ease;
-    }
-
-    ul.thumbnails {
-        margin-bottom: 0px;
-        padding: 15px 0px 15px 0px;
-    }
-    div.thumbnail {
-        position: relative;
-        margin-bottom: 0px;
-        border: none;
-        background-color: black;
-    }
-
-
-    li {
-        list-style-type:none;
-        padding-left: 2.5px;
-        padding-right: 2.5px;
-    }
-
-    ::selection { background: #ff5e99; color: #FFFFFF; text-shadow: 0; }
-    ::-moz-selection { background: #ff5e99; color: #FFFFFF; }
-}
-*/
-
