--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,4 +1,96 @@
+.nav-tabs-dropdown {
+  display: none;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
 
+.nav-tabs-dropdown:before {
+  content: "▼";
+  position: absolute;
+  right: 20px;
+}
+
+.theaters-dropdown-nav {
+  padding-left: 15px;
+}
+
+@media screen and (min-width: 769px) {
+  #nav-tabs-wrapper {
+    display: block!important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+    .nav-tabs-dropdown {
+        display: block;
+    }
+    #nav-tabs-wrapper {
+        position: absolute;
+        display: none;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        text-align: center;
+        z-index: 1;
+        float: left !important;
+        background-color: white;
+
+
+    }
+   .nav-tabs-horizontal {
+        min-height: 20px;
+        padding: 19px;
+        margin-bottom: 20px;
+        background-color: #f5f5f5;
+        border: 1px solid #e3e3e3;
+        border-radius: 4px;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+   }
+    .nav-tabs-horizontal  > li {
+        float: none;
+    }
+    .nav-tabs-horizontal  > li + li {
+        margin-left: 2px;
+    }
+    .nav-tabs-horizontal > li,
+    .nav-tabs-horizontal > li > a {
+        background: transparent;
+        width: 100%;
+    }
+    .nav-tabs-horizontal  > li > a {
+        border-radius: 4px;
+    }
+    .nav-tabs-horizontal  > li.active > a,
+    .nav-tabs-horizontal  > li.active > a:hover,
+    .nav-tabs-horizontal  > li.active > a:focus {
+        color: #ffffff;
+        background-color: #428bca;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+nav.navbar.navbar-default {
+  background-color: black;
+  margin-bottom: 0px;
+  border: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3;
+  .navbar-brand {
+    color: white;
+  }
+}
 
 .buzz-box {
   position: relative;
@@ -9,19 +101,15 @@ img.poster {
   max-height: 250px;
 }
 
-
-
-
 .body-container {
-  background-color: yellow;
+  background-color: white;
 }
 
-.theater-nav-container {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 0 !important;
+.no-lr-padding {
+
   padding-right: 0 !important;
 }
+
 
 .tooltipContent {
   display: none;
@@ -78,8 +166,6 @@ a:hover {
   text-decoration: none !important;
 }
 
-
-
 span.film-title {
   font-weight: 800;
 }
@@ -87,7 +173,6 @@ span.film-title {
 td.date-box div.film-listing-container:first-of-type{
   margin-top: 2.2rem;
 }
-
 
 span.date {
   float: right;
@@ -99,6 +184,7 @@ th, td {
 
 div.page-header h1 {
   font-size: 3rem;
+  color: black;
 }
 
 /*Calendar styling ('no-more-tables' based responsive styling)*/
@@ -152,6 +238,8 @@ div.page-header h1 {
   }
 
   /* Label the data */
+  #no-more-tables td {
+  }
   #no-more-tables td:before {
     content: attr(data-title);
   }
