--- a/app/views/_calendar.html.erb
+++ b/app/views/_calendar.html.erb
@@ -1,75 +1,57 @@
-<div class="container" id="calendar-box">
-  <% end_month = @date_filler.month + 2%>
-  <% until @date_filler.month == end_month%>
-  <% @date_filler = set_start_date(@date_filler) %>
-  <div class="row">
-    <div class="panel panel-default">
-      <div class="panel-heading"><%= Date::MONTHNAMES[@date_filler.month] %></div>
-      <!-- Responsive Calendar -->
-      <div id="no-more-tables">
-        <table class="table table-bordered col-sm-12 table-condensed cf" id="<%= Date::MONTHNAMES[@date_filler.month] %>">
-          <thead class="cf">
+<% end_month = @date_filler.month + 2%>
+<% until @date_filler.month == end_month%>
+<% @date_filler = set_start_date(@date_filler) %>
+<div class="row">
+  <div class="panel panel-default">
+    <div class="panel-heading"><%= Date::MONTHNAMES[@date_filler.month] %>
+    </div>
+    <!-- Responsive Calendar -->
+    <div id="no-more-tables">
+      <table class="table table-bordered col-sm-12 table-condensed cf" id="<%= Date::MONTHNAMES[@date_filler.month] %>">
+        <thead class="cf">
+          <tr>
+            <th>sunday</th>
+            <th>monday</th>
+            <th>tuesday</th>
+            <th>wednesday</th>
+            <th>thursday</th>
+            <th>friday</th>
+            <th>saturday</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% next_month = @date_filler.month + 1 %>
+          <% until @date_filler.month == next_month %>
             <tr>
-              <th>sunday</th>
-              <th>monday</th>
-              <th>tuesday</th>
-              <th>wednesday</th>
-              <th>thursday</th>
-              <th>friday</th>
-              <th>saturday</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% next_month = @date_filler.month + 1 %>
-            <% until @date_filler.month == next_month %>
-            <tr>
-              <% 7.times do %>
-              <td data-title="<%=@date_filler.strftime("%A, %B %-d")%>"
-                class="clearfix date-box" id="td-<%=@date_filler.strftime("%-m-%-d-%Y")%>">
+            <% 7.times do %>
+
+                <td
+                  <% if @date_filler < date_today %>
+                  data-title=""
+                  <% else %>
+                  data-title="<%=@date_filler.strftime("%A, %B %-d")%>"
+                  <% end %>
+                  class="clearfix date-box" id="td-<%=@date_filler.strftime("%-m-%-d-%Y")%>">
+
                 <span class='date hidden-xs'><%=@date_filler.mday%></span>
                 <% if (screenings_today?(@screenings, @date_filler)) %>
+                  <%= render partial: '/screenings_today', locals: {screenings: screenings, date_filler: @date_filler}%>
 
-                  <% films_today(@screenings, @date_filler).each do |film| %>
-                    <div class='film-listing-container' id=<%="film-#{film.id}"%>>
-
-                    <span class='film-title hasTooltip' data-value='<%=film.id%>'><%= film.title %></span>
-
-                    <% if current_user && current_user.films.include?(film)%>
-                      <div class="tooltipContent remove-film" data-value='<%=film.id%>'>
-                    <% else %>
-                      <div class="tooltipContent add-film" data-value='<%=film.id%>'>
-                    <% end %>
-                      </div><br>
-
-                    <% screenings_today(film, @date_filler).each do |screening| %>
-                      <a href="<%= screening.ticketing_url %>">
-                        <span class='showtime'><%= screening.time %></span>
-                      </a>
-                    <% end %>
-
-                    <br>
-                    <span class='theater-name'><%= screenings_today(film, @date_filler).first.theater.name %></span>
-                  </div>
-                  <% end %>
-
+                <% elsif @date_filler < date_today %>
+                  <span class='past-placeholder'></span>
                 <% else %>
                   <br>
                   <span class='placeholder hidden-sm hidden-md hidden-lg hidden-xl'></span>
                 <% end %>
+              </td>
+              <% @date_filler += 1 %>
+            <% end %>
 
-
-                </td>
-                <% @date_filler += 1 %>
-                <% end %>
-
-              </tr>
-              <% end %>
-
-            </tbody>
-          </table>
-        </div>
-
-      </div>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
-    <% end %>
   </div>
+</div>
+<% end %>
