--- a/app/views/screenings/from_theater.js.erb
+++ b/app/views/screenings/from_theater.js.erb
@@ -1,2 +1,6 @@
 $("#calendar-box").html("<%= escape_javascript(render partial: '/calendar', locals: { screenings: @selected })%>");
+if ( $("#calendar-box").hasClass("user-watchlist") ){
+  $("#calendar-box").removeClass("user-watchlist")
+}
+addAllTooltips();
 addBackgroundToAllEmptyDays();
