--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -1,2 +1,4 @@
 $("#calendar-box").html("<%= escape_javascript(render partial: '/calendar', locals: { screenings: @screenings, date_fille: @date_filler })%>");
+$("#calendar-box").toggleClass("user-watchlist")
+addAllTooltips();
 addBackgroundToAllEmptyDays();
