--- a/app/assets/stylesheets/buzzbox.scss
+++ b/app/assets/stylesheets/buzzbox.scss
@@ -1,126 +1,120 @@
 .carousel-control { width:  4%; }
 .carousel-control.left,.carousel-control.right {margin-left:15px;background-image:none;}
 @media (max-width: 767px) {
-    @media all and (transform-3d), (-webkit-transform-3d) {
-      .carousel-inner > .item.next,
-      .carousel-inner > .item.active.right {
-          left: 0;
-          -webkit-transform: translate3d(33.33%, 0, 0);
-          transform: translate3d(33.33%, 0, 0);
-      }
-      .carousel-inner > .item.prev,
-      .carousel-inner > .item.active.left {
-          left: 0;
-          -webkit-transform: translate3d(-33.33%, 0, 0);
-          transform: translate3d(-33.33%, 0, 0);
-      }
+  @media all and (transform-3d), (-webkit-transform-3d) {
+    .carousel-inner > .item.next,
+    .carousel-inner > .item.active.right {
+      left: 0;
+      -webkit-transform: translate3d(33.33%, 0, 0);
+      transform: translate3d(33.33%, 0, 0);
+    }
+    .carousel-inner > .item.prev,
+    .carousel-inner > .item.active.left {
+      left: 0;
+      -webkit-transform: translate3d(-33.33%, 0, 0);
+      transform: translate3d(-33.33%, 0, 0);
+    }
   }
-  .active > div { display:none; }
+  .item > div { display: none; }
   .active > div:first-child { display:block; }
   .active > div:first-child + div { display:block; }
   .active > div:first-child + div + div { display:block; }
 
 }
 @media (min-width: 767px) and (max-width: 992px ) {
-    @media all and (transform-3d), (-webkit-transform-3d) {
-      .carousel-inner > .item.next,
-      .carousel-inner > .item.active.right {
-          left: 0;
-          -webkit-transform: translate3d(25%, 0, 0);
-          transform: translate3d(25%, 0, 0);
-      }
-      .carousel-inner > .item.prev,
-      .carousel-inner > .item.active.left {
-          left: 0;
-          -webkit-transform: translate3d(-25%, 0, 0);
-          transform: translate3d(-25%, 0, 0);
-      }
+  @media all and (transform-3d), (-webkit-transform-3d) {
+    .carousel-inner > .item.next,
+    .carousel-inner > .item.active.right {
+      left: 0;
+      -webkit-transform: translate3d(25%, 0, 0);
+      transform: translate3d(25%, 0, 0);
+    }
+    .carousel-inner > .item.prev,
+    .carousel-inner > .item.active.left {
+      left: 0;
+      -webkit-transform: translate3d(-25%, 0, 0);
+      transform: translate3d(-25%, 0, 0);
+    }
   }
-  .active > div { display:none; }
+  .item > div { display: none; }
   .active > div:first-child { display:block; }
   .active > div:first-child + div { display:block; }
   .active > div:first-child + div + div { display:block; }
   .active > div:first-child + div + div + div { display:block; }
 }
 @media (min-width: 992px ) {
-    @media all and (transform-3d), (-webkit-transform-3d) {
-      .carousel-inner > .item.next,
-      .carousel-inner > .item.active.right {
-          left: 0;
-          -webkit-transform: translate3d(16.66666667%, 0, 0);
-          transform: translate3d(16.66666667%, 0, 0);
-      }
-      .carousel-inner > .item.prev,
-      .carousel-inner > .item.active.left {
-          left: 0;
-          -webkit-transform: translate3d(-16.66666667%, 0, 0);
-          transform: translate3d(-16.66666667%, 0, 0);
-      }
+  @media all and (transform-3d), (-webkit-transform-3d) {
+    .carousel-inner > .item.next,
+    .carousel-inner > .item.active.right {
+      left: 0;
+      -webkit-transform: translate3d(16.66666667%, 0, 0);
+      transform: translate3d(16.66666667%, 0, 0);
+    }
+    .carousel-inner > .item.prev,
+    .carousel-inner > .item.active.left {
+      left: 0;
+      -webkit-transform: translate3d(-16.66666667%, 0, 0);
+      transform: translate3d(-16.66666667%, 0, 0);
+    }
   }
 
 }
 div.carousel-inner {
-    overflow: visible;
+  overflow: visible;
 }
 img.poster {
-    min-height: 100px;
+  min-height: 100px;
 }
 
-div.item div {
-    display: none;
-}
-div.item.active div {
-    display: block;
-}
+
+
 
 
 .thumbnail-container {
-
-
-    *{
-        -webkit-transition: all 0.5s ease-in-out;
-        -moz-transition: all 0.5s ease-in-out;
-        -o-transition: all 0.5s ease-in-out;
-        -ms-transition: all 0.5s ease-in-out;
-        transition: all 0.5s ease-in-out;
-    }
+  *{
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+  }
 }
 
 .thumbnail {
-    position:relative;
-    overflow:hidden;
-    /*background-color: black !important;*/
-    border: 0px !important;
+  position:relative;
+  overflow:hidden;
+  /*background-color: black !important;*/
+  border: 0px !important;
 }
 
 .caption {
-    position:absolute;
-    top:-100%;
-    right:0;
-    background:rgba(0, 0, 0, 0.5);
-    width:100%;
-    height:100%;
-    padding:2%;
-    text-align:center;
-    color:#fff !important;
-    z-index:2;
-    h4 {
-        font-size: 1rem;
-        border-bottom: 2px solid yellow;
-    }
-    p {
-        font-size: 1rem;
-    }
+  position:absolute;
+  top:-100%;
+  right:0;
+  background:rgba(0, 0, 0, 0.5);
+  width:100%;
+  height:100%;
+  padding:2%;
+  text-align:center;
+  color:#fff !important;
+  z-index:2;
+  h4 {
+    font-size: 1rem;
+    border-bottom: 2px solid yellow;
+  }
+  p {
+    font-size: 1rem;
+  }
 }
 .thumbnail:hover {
-    -webkit-transform: scale(1.3, 1.3);
-    -ms-transform: scale(1.3, 1.3);
-    transform: scale(1.3, 1.3);
-    transition: all 0.5s ease-in-out;
-    background-color: yellow !important;
-    z-index:1;
+  -webkit-transform: scale(1.3, 1.3);
+  -ms-transform: scale(1.3, 1.3);
+  transform: scale(1.3, 1.3);
+  transition: all 0.5s ease-in-out;
+  background-color: yellow !important;
+  z-index:1;
 
-    .caption {
-        top:0%;
-    }
+  .caption {
+    top:0%;
+  }
 }
