--- a/app/views/_theaters_nav.html.erb
+++ b/app/views/_theaters_nav.html.erb
@@ -1,22 +1,42 @@
-<div class="container theater-nav-container">
-  <ul class="nav nav-pills nav-justified">
-    <!-- <li class="active">
-      <a class="theater-pill" href="#">all listings</a>
-    </li> -->
-    <li class="theater-tab-box active">
-      <%= link_to 'all screenings', root_path, class:"theater-tab", :remote => true %>
-    </li>
-    <% @theaters.each do |theater| %>
-    <li class="theater-tab-box">
-      <%= link_to theater.name, fetch_screenings_path(:theater_id => theater.id), class: "theater-tab", :remote => true %>
-    </li>
-    <% end %>
-  </ul>
+
+
+<div class="theater-nav-container clearfix">
+
   <% if current_user %>
-  <div class="user-cal btn btn-success center col-xs-12"><%= link_to "#{current_user.username}'s Calendar", current_user, class: "theater-tab", :remote => true %></div>
+  <div class="user-cal btn btn-success center col-xs-6 col-sm-12 pull-right"><%= link_to "#{current_user.username}'s Calendar", current_user, class: "theater-tab", :remote => true %></div>
   <% else %>
-  <div class="user-cal btn btn-warning col-xs-12">
+  <div class="user-cal btn btn-warning pull-right col-xs-6 col-sm-12">
     <%= link_to 'Log-in to save movies to your own calendar', new_session_path %>
   </div>
   <% end %>
+
+
+    <div class="theater-tab-box pull-left collapsed col-xs-6">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle pull-left col-xs-12" data-toggle="collapse" data-target="#theater-nav">
+          <span class="theater-tab">THEATERS</span>
+        </button>
+      </div>
+
+      <div class="collapse navbar-collapse pull-left" id="theater-nav">
+        <ul class="nav nav-pills nav-justified">
+          <input type="hidden" id="selected_menu_item" value="=$selectedMenuId; ?>" />
+          <li class="theater-tab-box active">
+            <%= link_to 'all screenings', root_path, class:"theater-tab", :remote => true %>
+          </li>
+          <% @theaters.each do |theater| %>
+          <li class="theater-tab-box">
+            <%= link_to theater.name, fetch_screenings_path(:theater_id => theater.id), class: "theater-tab", :remote => true %>
+          </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+
+
+
+
+
 </div>
