--- a/app/views/_theaters_nav.html.erb
+++ b/app/views/_theaters_nav.html.erb
@@ -1,6 +1,6 @@
+<div id="affix-placeholder"></div>
 
-
-<div class="theater-nav-container clearfix">
+<div class="row theater-nav-container clearfix" id="theater-nav-container" data-spy="affix" data-offset-top="197">
 
   <% if current_user %>
   <div class="user-cal btn btn-success center col-xs-6 col-sm-12 pull-right"><%= link_to "#{current_user.username}'s Calendar", current_user, class: "theater-tab", :remote => true %></div>
