--- a/app/views/_theaters_nav.html.erb
+++ b/app/views/_theaters_nav.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 
 
-    <div class="theater-tab-box pull-left collapsed col-xs-6">
+    <div class="theater-tab-box pull-left collapsed col-xs-6 col-sm-12">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle pull-left col-xs-12" data-toggle="collapse" data-target="#theater-nav">
           <span class="theater-tab">THEATERS</span>
