--- a/app/assets/stylesheets/buzzbox.scss
+++ b/app/assets/stylesheets/buzzbox.scss
@@ -1,23 +1,32 @@
-.carousel-control { width:  4%; }
-.carousel-control.left,.carousel-control.right {margin-left:15px;background-image:none;}
+.carousel-control {
+  width:  4%;
+
+}
+.carousel-control.left{
+  left: -30px;
+  background-image:none;
+}
+.carousel-control.right {
+  right: -30px;
+  background-image:none;
+}
+
 @media (max-width: 767px) {
-
-
   .item > div.row > div { display: none; }
   .active > div.row > div:first-child { display:block; }
   .active > div.row > div:first-child + div { display:block; }
   .active > div.row > div:first-child + div + div { display:block; }
 
 }
+
 @media (min-width: 767px) and (max-width: 992px ) {
-
-
   .item > div.row > div { display: none; }
   .active > div.row > div:first-child { display:block; }
   .active > div.row > div:first-child + div { display:block; }
   .active > div.row > div:first-child + div + div { display:block; }
   .active > div.row > div:first-child + div + div + div { display:block; }
 }
+
 @media (min-width: 992px ) {
 
 }
@@ -27,6 +36,10 @@ div.carousel-inner {
 }
 img.poster {
   min-height: 100px;
+}
+
+.buzz-box-container {
+  padding: 10px 40px 0px 40px;
 }
 
 .thumbnail-container {
@@ -39,20 +52,24 @@ img.poster {
   }
 }
 
+div.item.active {
+  z-index: 5;
+}
+
 .thumbnail {
   position:relative;
   overflow:hidden;
   /*background-color: black !important;*/
   border: 0px !important;
+  margin-bottom: 0;
 }
 
 .caption {
   position:absolute;
   display: none;
   background:rgba(0, 0, 0, 0.5);
-  width:100%;
-  height:100%;
-  padding:2%;
+  width:95%;
+  height:96%;
   text-align:center;
   color:#fff !important;
   z-index:2;
@@ -70,9 +87,12 @@ img.poster {
   transform: scale(1.3, 1.3);
   transition: all 0.5s ease-in-out;
   background-color: yellow !important;
-  z-index:1;
 
   .caption {
     display: block;
   }
+}
+
+div#myCarousel {
+  padding-bottom: 10px;
 }
