--- a/app/views/_theaters_nav.html.erb
+++ b/app/views/_theaters_nav.html.erb
@@ -3,17 +3,17 @@
 
 
   <% if current_user %>
-  <div class="user-cal btn btn-success center col-xs-6 col-sm-12 pull-right"><%= link_to "#{current_user.username}'s Watchlist", current_user, class: "theater-tab", :remote => true %></div>
+  <div id="user-cal" data-user='true' class="user-cal btn btn-success center col-xs-6 col-sm-12 pull-right"><%= link_to "#{current_user.username}'s Watchlist", current_user, class: "theater-tab", :remote => true %></div>
   <% else %>
-  <div class="user-cal btn btn-warning pull-right col-xs-6 col-sm-12">
-    <%= link_to 'Your Watchlist', new_session_path %>
+  <div id="user-cal" data-user='false' class="user-cal btn btn-warning pull-right col-xs-6 col-sm-12">
+    <a href="#" data-toggle="modal" data-target="#login-modal">Your Watchlist</a>
   </div>
   <% end %>
 
 
   <div class="theater-tab-box pull-left collapsed col-xs-6 col-sm-12">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle pull-left col-xs-12" data-toggle="collapse" data-target="#theater-nav">
+      <button type="button" id="theaters-dropdown-button"class="navbar-toggle pull-left col-xs-12" data-toggle="collapse" data-target="#theater-nav">
         <span class="theater-tab">THEATERS</span>
       </button>
     </div>
