add buzzbox poster content and some style, fix login errors

--- a/app/assets/stylesheets/buzzbox.scss
+++ b/app/assets/stylesheets/buzzbox.scss
@@ -74,8 +74,11 @@ div.item.active {
   color:#fff !important;
   z-index:2;
   h4 {
-    font-size: 1rem;
+    font-size: 1.6rem;
     border-bottom: 2px solid yellow;
+    margin: 0 0 5px 0;
+    padding-bottom: 5px;
+
   }
   p {
     font-size: 1rem;
