--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,11 +53,11 @@
       <div class="loginmodal-container">
         <h1>Register</h1><br>
         <%= form_for :user, url: users_path, html: {:class => 'form-horizontal', :id => 'login-form'}, remote: true do |f| %>
-        <%= f.text_field :username, placeholder: "Username", id: "username", name: "user[username]"%>
-        <%= f.text_field :email, placeholder: "Email", id: "email", name: "user[email]"%>
-        <%= f.password_field :password, placeholder: "Password", id: "password_plaintext", name: "pass[password_plaintext]" %>
-        <%= f.password_field :confirm_password, placeholder: "Confirm Password", id: "confirm_password_plaintext", name: "pass[confirm_password]" %>
-        <%= f.submit "Login", name:"login", class:"login loginmodal-submit" %>
+            <%= f.text_field :username, placeholder: "Username", id: "username", name: "user[username]"%>
+            <%= f.text_field :email, placeholder: "Email", id: "email", name: "user[email]"%>
+            <%= f.password_field :password, confirmation: true, placeholder: "Password", id: "password_plaintext", name: "pass[password_plaintext]" %>
+            <%= f.password_field :password_confirmation, presence: true, placeholder: "Confirm Password", id: "confirm_password_plaintext", name: "pass[confirm_password]" %>
+            <%= f.submit "Login", name:"login", class:"login loginmodal-submit" %>
         <% end %>
         <div class="login-help">
           <a href="#" data-toggle="modal" data-target="#login-modal" data-dismiss="modal">Login</a>
