ajaxifying watchlist buttons

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -365,6 +365,7 @@ a:hover {
 
 span.film-title {
   font-weight: 800;
+  cursor: pointer;
 }
 
 td.date-box div.film-listing-container:first-of-type{
