--- a/app/views/screenings/from_theater.js.erb
+++ b/app/views/screenings/from_theater.js.erb
@@ -2,5 +2,4 @@ $("#calendar-box").html("<%= escape_javascript(render partial: '/calendar', loca
 if ( $("#calendar-box").hasClass("user-watchlist") ){
   $("#calendar-box").removeClass("user-watchlist")
 }
-addAllTooltips();
-addBackgroundToAllEmptyDays();
+updateAllOnUserLogin();
