style nav-main and theaternav

--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -1,5 +1,10 @@
-$primary-color: #ffffff;
-$secondary-color: yellow;
+$primary-color: white;
+$secondary-color: black;
+$tertiary-color: yellow;
+/*$quaternary-color: ;
+$quinary-color: ;
+$senary-color: ;
+$septenary-color: ;*/
 
 * {
   -webkit-box-sizing: border-box;
