--- a/app/assets/stylesheets/styles/navbar.scss
+++ b/app/assets/stylesheets/styles/navbar.scss
@@ -17,7 +17,7 @@ nav#main-nav {
     color: $primary-color;
   }
   ul.navbar-nav a:hover {
-    color: $secondary-color;
+    color: $tertiary-color;
   }
 
 }
