--- a/app/assets/stylesheets/styles/buzzbox.scss
+++ b/app/assets/stylesheets/styles/buzzbox.scss
@@ -4,18 +4,12 @@
       height: 93%;
       width: 91%;
       padding: 4px 4px 0px 4px !important;
-      h4.film-title {
-        font-size: 1rem;
-        max-height: 45%;
-        overflow: hidden;
-      }
       p.theater-name { display: none; }
       p.buzz-showtime {
         span.screening-time { display: none;}
       }
     }
   }
-
   .item > div.row > div { display: none; }
   .active > div.row > div:first-child { display:block; }
   .active > div.row > div:first-child + div { display:block; }
@@ -24,7 +18,6 @@
 }
 
 @media (min-width: 767px) and (max-width: 992px ) {
-  .caption h4 { font-size: 1.6rem; }
   .item > div.row > div { display: none; }
   .active > div.row > div:first-child { display:block; }
   .active > div.row > div:first-child + div { display:block; }
@@ -32,8 +25,19 @@
   .active > div.row > div:first-child + div + div + div { display:block; }
 }
 
-@media (min-width: 992px ) {
-
+@media (max-width: 499px)  {
+  .caption {
+    h4.film-title {
+      font-size: 1rem;
+      max-height: 45%;
+      overflow: hidden;
+    }
+  }
+}
+@media (min-width: 500px)  {
+  .caption {
+    h4.film-title { font-size: 1.6rem; }
+  }
 }
 
 .buzz-box {
@@ -62,11 +66,9 @@ div#myCarousel {
     right: -20px;
     i { right: 0px; }
   }
-
   div.carousel-inner { overflow: visible; }
   img.poster { min-height: 100px; }
   div.item.active { z-index: 5; }
-
 }
 
 .thumbnail-container {
@@ -91,6 +93,7 @@ div#myCarousel {
       text-align:center;
       color:#fff !important;
       z-index:2;
+      a { pointer-events: none; }
       h4 {
         border-bottom: 2px solid yellow;
         margin: 0 0 5px 0;
