--- a/app/assets/stylesheets/styles/navbar.scss
+++ b/app/assets/stylesheets/styles/navbar.scss
@@ -1,3 +1,5 @@
+.navbar-nav { -webkit-backface-visibility: hidden; }
+
 nav#main-nav {
   z-index: 16001;
   background-color: black;
@@ -20,4 +22,10 @@ nav#main-nav {
     color: $tertiary-color;
   }
 
+}
+
+@media screen and (max-width: 768px){
+  ul.navbar-nav {
+    margin: 0;
+  }
 }
