--- a/app/views/_theaters_nav.html.erb
+++ b/app/views/_theaters_nav.html.erb
@@ -1,14 +1,18 @@
-<div class="theater-nav-container clearfix" id="theater-nav-container">
+<div class="row clearfix" >
 
+
+
+  <div class="user-cal-container col-xs-6 col-sm-12 pull-right">
   <% if current_user %>
-    <%= button_to "#{current_user.username}'s Watchlist", current_user, class: "user-cal btn btn-success center col-xs-6 col-sm-12 pull-right", id: "user-cal",method: 'get', :remote => true %>
+    <%= button_to "#{current_user.username}'s Watchlist", current_user, class: "user-cal btn btn-success center col-xs-12", id: "user-cal",method: 'get', :remote => true %>
   <% else %>
-    <button id="user-cal" data-toggle="modal" data-target="#login-modal" class="user-cal btn btn-warning pull-right col-xs-5 col-sm-12">
+    <button id="user-cal" data-toggle="modal" data-target="#login-modal" class="user-cal btn btn-warning col-xs-12">
     Your Watchlist
     </button>
   <% end %>
+</div>
 
-  <div class="theater-tab-box pull-left collapsed col-xs-6 col-sm-12">
+  <div class="theater-tab-box-container pull-left collapsed col-xs-6 col-sm-12">
     <div class="navbar-header">
       <button type="button" id="theaters-dropdown-button"class="navbar-toggle pull-left col-xs-12" data-toggle="collapse" data-target="#theater-nav">
         <span class="theater-tab">THEATERS</span>
