--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
   <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog">
       <div class="loginmodal-container">
-        <h1>Login to Your Account</h1><br>
+        <h1>Login to Save Movies to Your Own Calendar</h1><br>
         <%= form_for :session, url: sessions_path, html: {:class => 'form-horizontal', :id => 'login-form'}, remote: true do |f| %>
         <%= f.text_field :username_or_email, placeholder: "Username or Email", id: "username_or_email", name: "username_or_email"%>
         <%= f.password_field :password, placeholder: "Password", id: "password_plaintext", name: "password_plaintext" %>
