--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -1,4 +1,5 @@
 $("#calendar-box").html("<%= escape_javascript(render partial: '/calendar', locals: { screenings: @screenings, date_filler: @date_filler })%>");
 $("#calendar-box").toggleClass("user-watchlist")
 
+initWatchlistTriggers();
 addBackgroundToAllEmptyDays();
