--- a/app/views/_calendar.html.erb
+++ b/app/views/_calendar.html.erb
@@ -1,7 +1,7 @@
 <% end_month = @date_filler.month + 2%>
 <% until @date_filler.month == end_month%>
 <% @date_filler = set_start_date(@date_filler) %>
-<div class="row calendar-container">
+<div class="calendar-container">
   <div class="">
     <div class="">
       <span class="month-header">
