--- a/app/views/welcome/_theaters_nav.html.erb
+++ b/app/views/welcome/_theaters_nav.html.erb
@@ -2,7 +2,7 @@
 
 
   <button type="button" id="theaters-dropdown-button" class="navbar-toggle col-xs-6" data-toggle="collapse" data-target="#theater-nav">
-    <span class="theater-tab">THEATERS<span class="caret"></span></span>
+    Theaters<span class="caret"></span>
   </button>
 
   <% if current_user %>
