--- a/app/assets/stylesheets/styles/calendar.scss
+++ b/app/assets/stylesheets/styles/calendar.scss
@@ -17,6 +17,13 @@ td.date-box div.film-listing-container:first-of-type{
   margin-top: 2.2rem;
 }
 
+@media screen and (min-width: 769px) {
+  td.date-box {
+    border-right: 1px solid #ccc;
+  }
+
+}
+
 th, td {
   width: 14.29%;
 }
